resume1/force-app/main/default/objects/Resume_Project__c/Resume_Project__c.object-meta.xml
<CustomObject>
    <label>Resume Project</label>
    <nameField>
        <label>Resume Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resume Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>