resume1/force-app/main/default/objects/Resume_Project__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resume</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Resume Projects</relationshipLabel>
    <relationshipName>Resume_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>